# mullion

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/superpowers/plans/: 2026-04-13-css-styled-plan.md
docs/superpowers/specs/: 2026-04-13-css-styled-design.md
examples/demo/: Cargo.toml  Trunk.toml  index.html
examples/demo/src/: main.rs
src/: activity.rs  context.rs  events.rs  lib.rs  theme.rs  tree.rs  workspace.rs
src/components/: activity_bar.rs  drop_overlay.rs  mod.rs  mullion_root.rs  pane_content.rs  pane_view.rs  split_handle.rs  workspace_switcher.rs
