[package]
name = "mullion"
version = "0.1.0"
edition = "2021"
description = "A Leptos library for splittable panes with activity bars"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "DragEvent",
    "DataTransfer",
    "MouseEvent",
    "HtmlElement",
    "Element",
    "DomRect",
    "CssStyleDeclaration",
    "Document",
    "Window",
    "EventTarget",
] }
