[package]
name = "mullion-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
mullion = { path = "../.." }
css-styled = { git = "https://github.com/ignition-is-go/css-styled.git", version = "0.1.0" }
leptos = { version = "0.8.17", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
md-icons = "0.3.3"
